# ctr-native-ap

./: .clang-format  .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  README.md  RELEASING.md  SETUP.md  THIRD_PARTY_NOTICES.md  ap-config.example.txt  ctr_native.c  game_includes.h  game_unity.h  main.c  package-linux.sh  platform.h  support-bundle.bat  support-bundle.ps1  support-bundle.sh
ap/: ap_crash.c  ap_crash.h  ap_crash_terminate.cpp  ap_credits_data.h  ap_deathlink.c  ap_deathlink.h  ap_hooks.c  ap_hooks.h  ap_items.h  ap_locations.h  ap_net.cpp  ap_net.h  ap_seedcfg.cpp  ap_seedcfg.h  ap_shortcut.c  ap_shortcut.h  ap_traps.c  ap_traps.h  ap_verify.c  ap_verify.h  ap_version.h  ap_wumpa.c  ap_wumpa.h
cmake/: APVendorCheck.cmake
docs/: MEMORY_MODEL.md  OVERLAYS.md  REPLAYS.md
game/: 221.c  221_225_EndEvent.c  222.c  223.c  224.c  225.c  BOTS.c  CAM.c  CDSYS.c  COLL.c  DebugFont.c  DecalFont.c  DecalGlobal.c  DecalHUD.c  DecalMP.c  Display.c  DotLights.c  DrawConfetti.c  DrawSky.c  DrawTires.c  DropRain.c  ElimBG.c  GAMEPAD.c  GAMEPROG.c  GhostReplay.c  GhostTape.c  INSTANCE.c  LIST.c  LevInstDef.c  LibraryOfModels.c  LinkedCollide.c  MEMPACK.c  PROC.c  Particle.c  PickupBots.c  PlayLevel.c  Podium.c  PushBuffer.c  QueueLoadTrack.c  RECTMENU.c  (+22 more)
game/225/: 225_Full.c
game/226/: 226_00_DrawLevelOvr1P.c  R226.c
game/227/: 227_00_DrawLevelOvr2P.c  R227.c
game/228/: 228_00_DrawLevelOvr3P.c  R228.c
game/229/: 229_00_DrawLevelOvr4P.c  R229.c
game/230/: 230_00_MM_Battle_DrawIcon_Character.c  230_01_MM_TransitionInOut.c  230_02_MM_Title_MenuUpdate.c  230_03_MM_Title_SetTrophyDPP.c  230_04_MM_Title_CameraMove.c  230_05_MM_Title_ThTick.c  230_07_MM_Title_CameraReset.c  230_08_MM_Title_KillThread.c  230_09_30_MM_CheatCodes.c  230_32_MM_ToggleRows_PlayerCount.c  230_33_MM_MenuProc_1p2p.c  230_39_MM_AdvNewLoad_GetMenuPtr.c  230_40_MM_Characters_AnimateColors.c  230_41_MM_Characters_GetNextDriver.c  230_42_MM_Characters_boolIsInvalid.c  230_43_MM_Characters_GetModelByName.c  230_44_MM_Characters_DrawWindows.c  230_45_MM_Characters_SetMenuLayout.c  230_46_MM_Characters_BackupIDs.c  230_47_MM_Characters_PreventOverlap.c  230_49_MM_Characters_HideDrivers.c  230_50_MM_Characters_MenuProc.c  230_51_MM_TrackSelect_Video_SetDefaults.c  230_53_MM_TrackSelect_Video_Draw.c  230_55_MM_TrackSelect_Init.c  230_56_MM_TrackSelect_MenuProc.c  230_57_MM_TrackSelect_GetMenuPtr.c  230_59_MM_CupSelect_MenuProc.c  230_60_MM_Battle_CloseSubMenu.c  230_61_MM_Battle_DrawIcon_Weapon.c  230_64_MM_HighScore_Text3D.c  230_66_MM_HighScore_Init.c  230_67_MM_HighScore_MenuProc.c  230_69_MM_Scrapbook_PlayMovie.c  230_70_MM_ResetAllMenus.c  230_73_MM_JumpTo_BattleSetup.c  230_74_MM_JumpTo_TrackSelect.c  230_75_MM_JumpTo_Characters.c  230_76_MM_JumpTo_Scrapbook.c  230_77_MM_Video_DecDCToutCallbackFunc.c  (+14 more)
game/231/: 231_002_005_RB_Player_ModifyWumpa.c  231_002_RB_Player_ModifyWumpa.c  231_003_RB_MinePool_Init.c  231_004_RB_MinePool_Remove.c  231_005_RB_MinePool_Add.c  231_006_RB_Hazard_HurtDriver.c  231_007_RB_Hazard_CollideWithDrivers.c  231_008_RB_Hazard_CollideWithBucket.c  231_009_RB_Hazard_ThCollide_Generic_Alt.c  231_010_RB_Hazard_ThCollide_Missile.c  231_011_RB_Hazard_ThCollide_Generic.c  231_012_RB_Potion_OnShatter_TeethCallback.c  231_013_RB_Potion_OnShatter_TeethSearch.c  231_014_RB_Potion_ThTick_InAir.c  231_015_RB_GenericMine_LInB.c  231_016_RB_GenericMine_ThTick.c  231_019_RB_TNT_ThTick_SitOnHead.c  231_020_RB_TNT_ThTick_ThrowOnHead.c  231_021_RB_Explosion_ThTick.c  231_025_RB_MovingExplosive_Explode.c  231_026_RB_Warpball_FadeAway.c  231_027_RB_Warpball_Death.c  231_028_RB_Warpball_NewPathNode.c  231_029_RB_Warpball_Start.c  231_032_RB_Warpball_SeekDriver.c  231_034_RB_Warpball_ThTick.c  231_036_RB_MaskWeapon_ThTick.c  231_038_RB_ShieldDark_ThTick_Grow.c  231_042_RB_RainCloud_ThTick.c  231_043_RB_RainCloud_Init.c  231_044_RB_Explosion_InitPotion.c  231_045_RB_Explosion_InitGeneric.c  231_046_RB_Blowup_ProcessBucket.c  231_048_RB_Blowup_Init.c  231_049_RB_Burst_ProcessBucket.c  231_052_RB_Burst_CollLevInst.c  231_053_RB_Burst_Init.c  231_055_RB_GetThread_ClosestTracker.c  231_056_072_RB_Baron_ThTick.c  231_056_RB_Baron_ThTick.c  (+57 more)
game/232/: 232_01_AH_WarpPad_AllWarppadNum.c  232_02_AH_WarpPad_MenuProc.c  232_03_AH_WarpPad_SpinRewards.c  232_04_AH_WarpPad_ThTick.c  232_05_AH_WarpPad_ThDestroy.c  232_06_AH_WarpPad_LInB.c  232_07_AH_Garage_ThDestroy.c  232_08_AH_Garage_Open.c  232_09_AH_Garage_ThTick.c  232_10_AH_Garage_LInB.c  232_11_AH_SaveObj_ThDestroy.c  232_12_AH_SaveObj_ThTick.c  232_13_AH_SaveObj_LInB.c  232_14_AH_Door_ThDestroy.c  232_15_AH_Door_ThTick.c  232_16_AH_Door_LInB.c  232_17_AH_Map_LoadSave_Prim.c  232_18_AH_Map_LoadSave_Full.c  232_19_AH_Map_HubArrow.c  232_20_AH_Map_HubArrowOutter.c  232_23_AH_Map_Main.c  (+23 more)
include/: common.h  ctr_gte.h  ctr_math.h  decomp_functions.h  functions.h  gte.h  macros.h  namespace_Bots.h  namespace_Camera.h  namespace_Cdsys.h  namespace_Coll.h  namespace_Decal.h  namespace_Display.h  namespace_DrawLevel.h  namespace_Gamepad.h  namespace_Ghost.h  namespace_Howl.h  namespace_Instance.h  namespace_JitPool.h  namespace_Level.h  namespace_List.h  namespace_Lng.h  namespace_Load.h  namespace_Main.h  namespace_Memcard.h  namespace_Mempack.h  namespace_Particle.h  namespace_Proc.h  namespace_PushBuffer.h  namespace_RectMenu.h  namespace_RenderTires.h  namespace_SelectProfile.h  namespace_UI.h  namespace_Vehicle.h  ovr_226.h  ovr_227.h  ovr_228.h  ovr_229.h  ovr_230.h  ovr_231.h  (+5 more)
platform/: native_assets.c  native_audio.c  native_cd.c  native_checkpoint.c  native_checkpoint_file.c  native_config.c  native_custom_tracks.c  native_disc_image.c  native_glad.c  native_gpu.c  native_gpu_links.c  native_inline_c.c  native_input.c  native_libapi.c  native_libgpu.c  native_libgte.c  native_libspu.c  native_log.c  native_memcard.c  native_memory.c  native_perf.c  native_platform.c  native_renderer.c  native_replay_scheduler.c  native_savestate.c  native_state.c  native_str.c
tools/: CUSTOM-TRACK-SPIKE.md  check-credits.sh  extract_track.py  release-versions.sh
(+809 files in other folders)
